--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lexical/react": "^0.12.2",
+    "draft-js": "^0.11.7",
+    "lexical": "^0.12.2",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "react-draft-wysiwyg": "^1.15.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/draft-js": "^0.11.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "typescript": "^5"
   }
 }
