--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "lexical": "^0.12.2",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
-    "preline": "^2.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -25,6 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
